--- a/plugins/plugin-hosted/codenvy-hosted-ext-factory/pom.xml
+++ b/plugins/plugin-hosted/codenvy-hosted-ext-factory/pom.xml
@@ -27,6 +27,8 @@
     <name>Codenvy Plugin :: Hosted :: Factory</name>
     <properties>
         <dto-generator-out-directory>${project.build.directory}/generated-sources/dto/</dto-generator-out-directory>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
     <dependencies>
         <dependency>
@@ -104,10 +106,6 @@
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
             <artifactId>che-core-ide-ui</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.che.plugin</groupId>
-            <artifactId>che-plugin-git-ext-git</artifactId>
         </dependency>
         <dependency>
             <groupId>org.vectomatic</groupId>
