--- a/plugins/plugin-pullrequest/codenvy-plugin-pullrequest-ide/pom.xml
+++ b/plugins/plugin-pullrequest/codenvy-plugin-pullrequest-ide/pom.xml
@@ -26,6 +26,8 @@
     <name>Codenvy Plugin :: Pull request :: IDE</name>
     <properties>
         <dto-generator-out-directory>${project.build.directory}/generated-sources/dto/</dto-generator-out-directory>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
     <dependencies>
         <dependency>
@@ -67,6 +69,10 @@
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
             <artifactId>che-core-api-git-shared</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.che.core</groupId>
+            <artifactId>che-core-api-model</artifactId>
         </dependency>
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
